--- a/fancyarray/CMakeLists.txt
+++ b/fancyarray/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(StructOfVectors VERSION 0.1.0)
+project(fancyarray VERSION 0.1.0)
 
-enable_testing()
+# enable_testing()
 
-add_executable(StructOfVectors main.cpp)
+add_executable(fancyarray main.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
