Add template for performance tests

--- a/fancyarray/CMakeLists.txt
+++ b/fancyarray/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(fancyarray VERSION 0.1.0)
 
-# enable_testing()
+add_executable(test_fancyarray test_fancyarray.cpp)
 
-add_executable(fancyarray main.cpp)
+add_executable(performance_tuple_of_vectors performance_tuple_of_vectors.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 set(CMAKE_CXX_STANDARD 20)
 
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 
